--- a/app/src/main/res/layout/dynamic_fragment_layout.xml
+++ b/app/src/main/res/layout/dynamic_fragment_layout.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/dyn"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DynamicFragment">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,22 +23,7 @@
             android:dividerHeight="15.0sp">
         </ListView>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:text="@string/home_heading"
-            android:textSize="28sp" />
 
-        <!--      <androidx.recyclerview.widget.RecyclerView-->
-        <!--          android:id="@+id/question_list"-->
-        <!--          android:layout_width="match_parent"-->
-        <!--          android:layout_height="match_parent"-->
-
-        <!--          />-->
 
     </LinearLayout>
 
