--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_heading"
+            android:text="My Questions"
             android:textSize="28sp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
